--- a/css/styles.css
+++ b/css/styles.css
@@ -320,6 +320,8 @@ color: #212121;
   display: flex;
   width: 500px;
   height: 200px;
+  gap: 30px;
+  margin-left: 70px;;
 
 }
 .client-container{
@@ -332,14 +334,18 @@ color: #212121;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   padding: 14px 32px;
+  fill:  #AFB1B8;
 }
 .client-container:hover{
   border-color: #2196f3;
-  fill: #2196f3;
 }
 .client-logo{
 height:52px;
 width:106px;
+color: white;
+}
+.client-container:hover .client-logo{
+  fill:#2196f3;
 }
 
 
