--- a/css/styles.css
+++ b/css/styles.css
@@ -186,11 +186,14 @@ body {
   /*index */
   margin-top: 60px;
   background: #f5f4fa;
+  border-radius: 22px;
+
 }
 .fondo-ne {
-  background: #ffffff;
-  box-shadow: none;
-  list-style: none;
+  background-color: #ffffff;
+  width: 240px;
+
+  /* list-style:circle; */
 }
 /*clases de iconos en redes de equipo de trabajo*/
 .social-link-container {
@@ -219,7 +222,7 @@ body {
   justify-content: space-between;
 }
 .card {
-  width: 270px;
+  width: 240px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -262,10 +265,10 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  background-color: #ffffff;
+  background-color: #ffffff; */
 }
 .cont33-flex {
   /*matriz*/
