--- a/css/styles.css
+++ b/css/styles.css
@@ -443,6 +443,8 @@ address {
 .main-buttons:hover {
   background-color: var(--underline-color);
   color: white;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
 }
 
 /* ********************************************************** */
