--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,25 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
-.container-header {
+.container-header1 {
+  width: 1200px;
+  margin:  0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.container-header2 {
+  display: flex;
+  align-items: center;
+  /* padding-left: 50px; */
+}
+.container-header {
+  display: flex;
   align-items: center;
   background-color: #ffff;
   height: 80px;
   margin: 0px;
-  padding-left: 20px;
+  padding-left: 0px;
 }
 
 .link-menu,
@@ -345,9 +356,10 @@ ul {
 .fondo-matriz {
   background: #ffffff;
   border: 1px solid #eeeeee;
-  background: #FFFFFF;
-  border: 1px solid #EEEEEE;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .cont5-flex {
@@ -443,8 +455,9 @@ address {
 .main-buttons:hover {
   background-color: var(--underline-color);
   color: white;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 /* ********************************************************** */
@@ -551,16 +564,16 @@ border-radius: 4px;
   flex-direction: row;
   /* justify-content: space-between; */
   padding-left: 50px;
-  margin-top: 90px;
+  margin-top: 10px;
   margin-left: none;
-  gap: 20px;
+  gap: 10px;
 }
 .footer-columna {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  grid-gap: 1px;
-  border-top: 100px;
+  /* border-top: 75px; */
+  margin-top: 50px;
 }
 
 .iconfooter-container {
